<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#2C0F0F"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="291dp"

        android:contentDescription="@string/icon_description"
        android:scaleType="fitCenter"
        android:scaleX="2"
        android:scaleY="2"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/continue_as"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDriver"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:onClick="startDriverActivity"
        android:text="@string/driver"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonTechnical"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:onClick="startRepairmanActivity"
        android:text="@string/technician"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#C51212" />


</LinearLayout>