<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="de.h_da.nzse.praktikum_sose22.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="de.h_da.nzse.praktikum_sose22.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_list"
        android:name="de.h_da.nzse.praktikum_sose22.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />
</navigation>